--- a/index.html
+++ b/index.html
@@ -8,35 +8,37 @@
   <title>Calculator</title>
 </head>
 <body>
-  <div class="calc">
-    <input type="number" class="output" value="0">
-  </div>
-  <div class="row">
-    <button type="button" class="clear btn">C</button>
-    <button type="button" class="back btn">&#8592;</button>
-    <button type="button" class="c4 ">&#247;</button>
-  </div>
-  <div class="row">
-    <button type="button" class="btn">7</button>
-    <button type="button" class="btn">8</button>
-    <button type="button" class="btn">9</button>
-    <button type="button" class="c4">&#215;</button>
-  </div>
-  <div class="row">
-    <button type="button" class="btn">6</button>
-    <button type="button" class="btn">5</button>
-    <button type="button" class="btn">4</button>
-    <button type="button" class="c4 ">&#8722;</button>
-  </div>
-  <div class="row">
-    <button type="button" class="btn">1</button>
-    <button type="button" class="btn">2</button>
-    <button type="button" class="btn">3</button>
-    <button type="button" class="c4 ">&#43;</button>
-  </div>
-  <div class="row">
-    <button type="button" class="zero btn">0</button>
-    <button type="button" class="c4">&#61;</button>
+  <div id="container">
+    <div class="calc">
+      <input type="text" class="input" value="0">
+    </div>
+    <div class="row">
+      <button type="button" class="clear btn">C</button>
+      <button type="button" class="back btn">&#8592;</button>
+      <button type="button" class="c4 ">&#247;</button>
+    </div>
+    <div class="row">
+      <button type="button" class="btn">7</button>
+      <button type="button" class="btn">8</button>
+      <button type="button" class="btn">9</button>
+      <button type="button" class="c4">&#215;</button>
+    </div>
+    <div class="row">
+      <button type="button" class="btn">6</button>
+      <button type="button" class="btn">5</button>
+      <button type="button" class="btn">4</button>
+      <button type="button" class="c4 ">&#8722;</button>
+    </div>
+    <div class="row">
+      <button type="button" class="btn">1</button>
+      <button type="button" class="btn">2</button>
+      <button type="button" class="btn">3</button>
+      <button type="button" class="c4 ">&#43;</button>
+    </div>
+    <div class="row">
+      <button type="button" class="zero btn">0</button>
+      <button type="button" class="c4">&#61;</button>
+    </div>
   </div>
 </body>
 </html>
